(include_subdirs unqualified)

(executable
  (name pml)
  (public_name pml)
  (modules :standard)
  (preprocess (per_module ((action (run pa_ocaml %{input-file})) parser)))
  (libraries bindlib earley.core earley.str))

(rule
  (targets config.ml)
  (action (with-stdout-to config.ml (progn
    (echo "let path = [ String.trim \"") ; hack to remove newline.
    (run opam config var lib)
    (echo "\"]\n")))))
