(include_subdirs unqualified)

(executable
  (name pml)
  (public_name pml)
  (modules :standard)
  (preprocess (per_module ((pps pacomb.ppx) parser)))
  (libraries unix bindlib pacomb))

(rule
  (targets config.ml)
  (action (with-stdout-to config.ml (progn
    (echo "let path = [ String.trim \"") ; hack to remove newline.
    (run opam var lib)
    (echo "\"]\n")))))
